--- a/.github/workflows/docker-publish-n2n.yml
+++ b/.github/workflows/docker-publish-n2n.yml
@@ -206,11 +206,11 @@ jobs:
           # e.g. "2022-10-30T19:29:49.877019Z"
           last_pulled_date=${{ steps.get_tag_last_pushed.outputs.value }}
           echo "last_pulled_date=${last_pulled_date}" >> $GITHUB_OUTPUT
-          LOG_INFO "check tag - ${{ needs.init-build-version.outputs.BUILD_VERSION_B_S_rC }}"
+          LOG_INFO "check tag - ${{ needs.init-build-infos.outputs.BUILD_VERSION_B_S_rC }}"
           LOG_INFO "last_pulled_date - ${last_pulled_date}"
           if [[ "true" == "${{ env.FORCE_PUSH }}" || "true" == "${{ inputs.force_push }}" ]]; then
               LOG_WARNING "强制 编译/推送"
-          elif [[ "${last_pulled_date,,}" != "null" || "${{ needs.init-build-version.outputs.BUILD_PLATFORMS }}" == "" ]]; then
+          elif [[ "${last_pulled_date,,}" != "null" || "${{ needs.init-build-infos.outputs.BUILD_PLATFORMS }}" == "" ]]; then
               echo "skip_build_push=true" >> $GITHUB_OUTPUT
               LOG_INFO "跳过 编译/推送"
               exit 0
@@ -262,7 +262,6 @@ jobs:
           context: ${{ env.APP_NAME }}
           load: true
           no-cache: true
-          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ env.REGISTRY }}/${{ secrets.REGISTRY_USERNAME }}/${{ env.APP_NAME }}:test
           labels: ${{ steps.meta.outputs.labels }}
 
@@ -352,6 +351,7 @@ jobs:
       # https://github.com/docker/build-push-action
       - name: Build and push Docker image
         id: build-and-push
+        if: steps.tag_last_pushed.outputs.skip_build_push != 'true' || github.event_name != 'pull_request'
         uses: docker/build-push-action@v3
         with:
           context: ${{ env.APP_NAME }}
