--- a/.github/workflows/docker-publish-n2n.yml
+++ b/.github/workflows/docker-publish-n2n.yml
@@ -322,13 +322,13 @@ jobs:
               -v $(pwd)/test/:/n2n/conf/ \
               ${{ env.REGISTRY }}/${{ secrets.REGISTRY_USERNAME }}/${{ env.APP_NAME }}:test
             sleep 10
-            docker exec -ti n2n_edge_dhcpd \
+            docker exec -i n2n_edge_dhcpd \
               /bin/busybox ping -c 1 -w 5 -q 10.20.30.41 || exit 1
 
-            docker exec -ti n2n_edge_dhcpc \
+            docker exec -i n2n_edge_dhcpc \
               /bin/busybox ping -c 1 -w 5 -q 10.20.30.1 || exit 1
 
-            docker exec -ti n2n_edge_static \
+            docker exec -i n2n_edge_static \
               /bin/busybox ping -c 1 -w 5 -q 172.71.0.20 || exit 1
 
             # LOG_WARNING "Test done - ALL"
