--- a/n2n_ntop/docker-compose.test.yaml
+++ b/n2n_ntop/docker-compose.test.yaml
@@ -14,7 +14,8 @@ services:
 
   test-n2n_edge_dhcpd:
     depends_on:
-      - test-n2n_supernode
+      n2n_supernode:
+        condition: service_healthy
     image: zctmdc/n2n_ntop
     container_name: test_n2n_edge_dhcpd
     restart: always
@@ -36,8 +37,8 @@ services:
 
   test-n2n_edge_dhcpc:
     depends_on:
-      - test-n2n_edge_dhcpd
-      - test-n2n_supernode
+      test-n2n_edge_dhcpd:
+        condition: service_healthy
     image: zctmdc/n2n_ntop
     container_name: test_n2n_edge_dhcpc
     restart: always
@@ -56,7 +57,8 @@ services:
 
   test-n2n_edge_static:
     depends_on:
-      - test-n2n_supernode
+      n2n_supernode:
+        condition: service_healthy
     image: zctmdc/n2n_ntop
     container_name: test_n2n_edge_tatic
     restart: always
@@ -76,15 +78,15 @@ services:
 
   test-n2n_healthcheck:
     depends_on:
-      - test-n2n_edge_dhcpd
-      - test-n2n_supernode
+      test-n2n_edge_dhcpd:
+        condition: service_healthy
     image: zctmdc/n2n_ntop
     container_name: test_n2n_edge_healthcheck
     restart: always
     privileged: true
     # network_mode: host
     environment:
-      - MODE=DHCP
+      - MODE=DHCPC
       - SUPERNODE_HOST=test-n2n_supernode
       - SUPERNODE_PORT=10090
       - EDGE_TUN=test_edge_healthcheck
