--- a/n2n_ntop/test/edge.conf
+++ b/n2n_ntop/test/edge.conf
@@ -1,5 +1,5 @@
 # 虚拟网卡名字
--d=n2n_edge_static
+-d=t_edge_conf
 # edge ip
 -a=10.20.30.41
 # community 名字
@@ -7,4 +7,4 @@
 # community 密码
 -k=test
 # supernode 地址和端口
--l=172.71.0.20:7777
+-l=172.77.6.10:7777
