--- a/.github/workflows/docker-publish-n2n.yml
+++ b/.github/workflows/docker-publish-n2n.yml
@@ -374,6 +374,7 @@ jobs:
             LOG_WARNING "Test for platform: ${test_platform}"
             export TEST_PLATFORM="${test_platform}"
               cd ./scripts/
+              chmod +x *.sh
               . ./compose-test.sh
             LOG_WARNING "Test done - ${test_platform}"
           done
@@ -425,6 +426,7 @@ jobs:
             LOG_WARNING "Test for platform: ${test_platform}"
             export TEST_PLATFORM="${test_platform}"
               cd ./scripts/
+              chmod +x *.sh
               . ./compose-test.sh
             LOG_WARNING "Test done - ${test_platform}"
           done
