--- a/.github/workflows/docker-publish-n2n.yml
+++ b/.github/workflows/docker-publish-n2n.yml
@@ -427,7 +427,7 @@ jobs:
             export TEST_PLATFORM="${test_platform}"
               cd ./scripts/
               chmod +x *.sh
-              . ./compose-test.sh
+              sh -c ./compose-test.sh
             LOG_WARNING "Test done - ${test_platform}"
           done
           LOG_WARNING "Test done: ${{ steps.init-build-infos.outputs.BUILD_VERSION_B_S_rC }}"
