--- a/n2n_ntop/docker-compose.test.yaml
+++ b/n2n_ntop/docker-compose.test.yaml
@@ -11,7 +11,7 @@ services:
     # build:
     #   context: .
     #   dockerfile: Dockerfile
-    image: ${REGISTRY_USERNAME}/${APP_NAME}:test
+    image: ${REGISTRY_USERNAME}/${APP_NAME}:${test_tag}
     container_name: test_n2n_supernode
     restart: always
     privileged: true
@@ -28,7 +28,7 @@ services:
     depends_on:
       test-n2n_supernode:
         condition: service_healthy
-    image: ${REGISTRY_USERNAME}/${APP_NAME}:test
+    image: ${REGISTRY_USERNAME}/${APP_NAME}:${test_tag}
     container_name: test_n2n_edge_dhcpd
     restart: always
     privileged: true
@@ -55,7 +55,7 @@ services:
     depends_on:
       test-n2n_edge_dhcpd:
         condition: service_healthy
-    image: ${REGISTRY_USERNAME}/${APP_NAME}:test
+    image: ${REGISTRY_USERNAME}/${APP_NAME}:${test_tag}
     container_name: test_n2n_edge_dhcpc
     restart: always
     privileged: true
@@ -79,7 +79,7 @@ services:
     depends_on:
       test-n2n_supernode:
         condition: service_healthy
-    image: ${REGISTRY_USERNAME}/${APP_NAME}:test
+    image: ${REGISTRY_USERNAME}/${APP_NAME}:${test_tag}
     container_name: test_n2n_edge_static
     restart: always
     privileged: true
@@ -104,7 +104,7 @@ services:
     depends_on:
       test-n2n_supernode:
         condition: service_healthy
-    image: ${REGISTRY_USERNAME}/${APP_NAME}:test
+    image: ${REGISTRY_USERNAME}/${APP_NAME}:${test_tag}
     container_name: test_n2n_edge_conf
     restart: always
     privileged: true
@@ -122,7 +122,7 @@ services:
     depends_on:
       test-n2n_edge_dhcpd:
         condition: service_healthy
-    image: ${REGISTRY_USERNAME}/${APP_NAME}:test
+    image: ${REGISTRY_USERNAME}/${APP_NAME}:${test_tag}
     container_name: test_n2n_edge_manual
     restart: always
     privileged: true
