--- a/.github/workflows/scan-all-to-build-n2n.yml
+++ b/.github/workflows/scan-all-to-build-n2n.yml
@@ -15,24 +15,7 @@ on:
         default: false
 
 jobs:
-  build-all-n2n:
-    needs: [scan-all]
-    permissions:
-      contents: read
-      packages: write
-      id-token: write
-    strategy:
-      fail-fast: false
-      max-parallel: 1
-      matrix: ${{ fromJSON(needs.scan-all.outputs.version_b_s_rcs) }}
-
-    uses: ./.github/workflows/docker-publish.yml
-    with:
-      version_b_s_rc: ${{ matrix.version_b_s_rc }}
-      force_push: ${{ needs.scan-all.outputs.force_push == 'true' }}
-    secrets: inherit
-
-  build-releases-version:
+  build-all-releases-version:
     permissions:
       contents: read
       packages: write
@@ -43,7 +26,7 @@ jobs:
       max-parallel: 1
       matrix:
         version_b_s_rc: [v1, v2, v2s, v3]
-    uses: ./.github/workflows/docker-publish.yml
+    uses: ./.github/workflows/docker-publish-n2n.yml
     with:
       version_b_s_rc: ${{ matrix.version_b_s_rc }}
       force_push: ${{ inputs.force_push == 'true'}}
