--- a/.github/workflows/docker-publish-n2n.yml
+++ b/.github/workflows/docker-publish-n2n.yml
@@ -211,7 +211,7 @@ jobs:
           LOG_INFO "last_pulled_date - ${last_pulled_date}"
           if [[ "true" == "${{ env.FORCE_PUSH }}" || "true" == "${{ inputs.force_push }}" ]]; then
               LOG_WARNING "强制 编译/推送"
-          elif [[ "${last_pulled_date,,}" != "null" || "${{ steps.init-build-infos.outputs.BUILD_PLATFORMS }}" == "" ]]; then
+          elif [[ "${last_pulled_date,,}" != "null" || "${{ steps.init-build-infos.outputs.BUILD_PLATFORMS }}" == "" || ${{ github.event_name }} != 'pull_request' ]]; then
               echo "skip_build_push=true" >> $GITHUB_OUTPUT
               LOG_INFO "跳过 编译/推送"
               exit 0
@@ -388,7 +388,7 @@ jobs:
       # https://github.com/docker/build-push-action
       - name: Build and push Docker image
         id: build-and-push
-        if: steps.tag_last_pushed.outputs.skip_build_push != 'true' && github.event_name != 'pull_request'
+        if: steps.tag_last_pushed.outputs.skip_build_push != 'true'
         uses: docker/build-push-action@v3
         with:
           context: ${{ env.APP_NAME }}
@@ -407,7 +407,7 @@ jobs:
 
       - name: Test n2n with compose again
         id: n2n-test-use-compose-again
-        if: steps.tag_last_pushed.outputs.skip_build_push != 'true' && github.event_name != 'pull_request'
+        if: steps.tag_last_pushed.outputs.skip_build_push != 'true'
         run: |
           LOG_INFO() {
               echo -e "\033[0;32m[INFO] $* \033[0m"
@@ -444,7 +444,7 @@ jobs:
       # transparency data even for private images, pass --force to cosign below.
       # https://github.com/sigstore/cosign
       - name: Sign the published Docker image
-        if: ${{ github.event_name != 'pull_request' }}
+        if: steps.tag_last_pushed.outputs.skip_build_push != 'true'
         env:
           COSIGN_EXPERIMENTAL: "true"
         # This step uses the identity token to provision an ephemeral certificate
