fixbugs 第二个参数是 -h --help 进入处理的bug 配置文件读取不生效的bug 附加参数未生效的bug 健康检查失败的bug 其他bug update 支持长参数 支持嵌套配置文件 手动附加参数处理

--- a/n2n_ntop/Dockerfile
+++ b/n2n_ntop/Dockerfile
@@ -13,18 +13,18 @@ ENV TZ Asia/Shanghai
 ##################-----##################
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* 
 
-ENV MODE SUPERNODE
+ENV MODE ""
 
-ENV EDGE_IP 10.11.12.10
+ENV EDGE_IP dhcp:0.0.0.0
 ENV EDGE_NETMASK 255.255.255.0
 ENV EDGE_COMMUNITY n2n
 ENV EDGE_KEY test
 ENV EDGE_ENCRYPTION -A3
-ENV EDGE_TUN ''
+ENV EDGE_TUN ""
 
 ENV N2N_ARGS ""
 # v1:-br v2:-EfrA v2s--bfr -L auto v3:-Efr -e auto
-ENV USE_DEFALT_ARG "TRUE"
+ENV USE_DEFALT_ARGS "TRUE"
 
 ENV EDGE_MAC ""
 ENV GET_MAC_FROM_WAN "FALSE"
@@ -37,7 +37,7 @@ ARG DEFAULT_SUPERNODE_PORT=10090
 ENV SUPERNODE_HOST ${DEFAULT_SUPERNODE_HOST}
 ENV SUPERNODE_PORT ${DEFAULT_SUPERNODE_PORT}
 # WATCH DOG 使用 /n2n/n2n_healthcheck.sh 匹配
-ENV HEALTHCHECK_IP ''
+ENV HEALTHCHECK_IP ""
 ENV WATCH_DOG 'TRUE'
 COPY ./scripts/*.sh /n2n/
 RUN chmod a+x /n2n/*
