--- a/.github/workflows/docker-publish-frp.yml
+++ b/.github/workflows/docker-publish-frp.yml
@@ -171,7 +171,7 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          platforms: "linux/amd64,linux/arm64,linux/arm/v7,linux/ppc64le,linux/s390x"
+          platforms: "linux/amd64,linux/386,linux/arm64,linux/arm/v7,linux/arm/v6"
           cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ secrets.REGISTRY_USERNAME }}/${{ env.APP_NAME }}:buildcache
           cache-to: type=registry,ref=${{ env.REGISTRY }}/${{ secrets.REGISTRY_USERNAME }}/${{ env.APP_NAME }}:buildcache,mode=max
 
