--- a/frp/Dockerfile
+++ b/frp/Dockerfile
@@ -69,4 +69,4 @@ ENV SK=abcdefg
 ENV MODE=RUN_FRPC
 
 ENTRYPOINT ["/opt/frp/docker-entrypoint.sh"]
-HEALTHCHECK --interval=30s --timeout=10s CMD curl --head "http://localhost:${ADMIN_PORT}/healthz" || exit 1
+HEALTHCHECK --interval=30s --timeout=10s CMD curl -s --head "http://localhost:${ADMIN_PORT}/healthz" || exit 1
