将配置保存到  volume 持久化

--- a/frp/Dockerfile
+++ b/frp/Dockerfile
@@ -3,20 +3,6 @@ FROM snowdreamtech/frps as frps_src
 
 FROM alpine
 
-ARG name="frp"
-ARG summary="frp 是一个专注于内网穿透的高性能的反向代理应用，支持 TCP、UDP、HTTP、HTTPS 等多种协议。可以将内网服务以安全、便捷的方式通过具有公网 IP 节点的中转暴露到公网。"
-LABEL description="${summary}" \
-  maintainer="<zctmdc@outlook.com>" \
-  app.kubernetes.io/name="${name}" \
-  org.opencontainers.image.title="${name}" \
-  org.opencontainers.artifact.description="${summary}" \
-  org.opencontainers.image.url="https://hub.docker.com/r/zctmdc/frp" \
-  org.opencontainers.image.source="https://github.com/zctmdc/docker/tree/alpha/frp" \
-  org.opencontainers.image.authors="zctmdc@outlook.com" \
-  org.opencontainers.image.description="${summary}" \
-  org.opencontainers.image.documentation="https://github.com/zctmdc/docker/tree/alpha/frp/README.MD"\
-  org.opencontainers.image.licenses="Apache License 2.0"
-
 RUN apk add --update --no-cache tzdata curl bash \
   && cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
   && echo "Asia/Shanghai" > /etc/timezone \
@@ -37,7 +23,7 @@ COPY ./scripts/*  /opt/frp/
 RUN ln -s /usr/bin/frps /opt/frp/fprs \
   && ln -s /usr/bin/frpc /opt/frp/fprc
 
-RUN chmod a+x /opt/frp/* 
+RUN chmod a+x /opt/frp/*
 
 # string 二级域名后缀/服务器地址
 ENV SUBDOMAIN_HOST=localhost
@@ -67,6 +53,8 @@ ENV SK=abcdefg
 
 # RUN_FRPS/RUN_FRPS
 ENV MODE=RUN_FRPC
+
+VOLUME /etc/frp/
 
 ENTRYPOINT ["/opt/frp/docker-entrypoint.sh"]
 HEALTHCHECK --interval=30s --timeout=10s CMD curl -s --head "http://localhost:${ADMIN_PORT}/healthz" || exit 1
