--- a/n2n/Dockerfile.build.debian-stable
+++ b/n2n/Dockerfile.build.debian-stable
@@ -21,7 +21,7 @@ RUN apt-get -qq -y install \
 
 # 安装RAR
 WORKDIR /tmp/scripts/
-COPY ./scripts/init_logger.sh ./scripts/install_rar.sh /tmp/scripts/
+COPY ./scripts/build/init_logger.sh ./scripts/build/install_rar.sh /tmp/scripts/
 RUN chmod +x /tmp/scripts/*.sh
 RUN /tmp/scripts/install_rar.sh
 
